tests/baselines/reference/templateStringInObjectLiteralES6.errors.txt
templateStringInObjectLiteralES6.ts(1,9): error TS2349: This expression is not callable.
  Type '{ a: string; }' has no call signatures.
templateStringInObjectLiteralES6.ts(3,5): error TS1136: Property assignment expected.
templateStringInObjectLiteralES6.ts(3,8): error TS1005: ',' expected.
templateStringInObjectLiteralES6.ts(3,10): error TS1134: Variable declaration expected.
templateStringInObjectLiteralES6.ts(4,1): error TS1128: Declaration or statement expected.


==== templateStringInObjectLiteralES6.ts (5 errors) ====
    var x = {
            ~
        a: `abc${ 123 }def`,
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type '{ a: string; }' has no call signatures.
        `b`: 321
        ~~~
!!! error TS1136: Property assignment expected.
           ~
!!! error TS1005: ',' expected.
             ~~~
!!! error TS1134: Variable declaration expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.